@@ -1024,7 +1024,7 @@ static int lov_create(struct obd_export *exp, struct obdo *src_oa,
         }
 
         maxage = cfs_time_shift_64(-lov->desc.ld_qos_maxage);
-        obd_statfs_rqset(exp->exp_obd, &osfs, maxage, 1);
+        obd_statfs_rqset(exp->exp_obd, &osfs, maxage, OBD_STATFS_NODELAY);
 
         rc = lov_prep_create_set(exp, &oinfo, ea, src_oa, oti, &set);
         if (rc)
@@ -2153,7 +2153,7 @@ static int lov_statfs_async(struct obd_device *obd, struct obd_info *oinfo,
         struct lov_obd *lov;
         int rc = 0;
         ENTRY;
-        
+
         LASSERT(oinfo != NULL);
         LASSERT(oinfo->oi_osfs != NULL);
 
@@ -2188,38 +2188,28 @@ static int lov_statfs_async(struct obd_device *obd, struct obd_info *oinfo,
 }
 
 static int lov_statfs(struct obd_device *obd, struct obd_statfs *osfs,
-                      __u64 max_age)
+                      __u64 max_age, __u32 flags)
 {
-        struct lov_obd *lov = &obd->u.lov;
-        struct obd_statfs lov_sfs;
-        int set = 0;
-        int rc = 0, err;
-        int i;
+        struct ptlrpc_request_set *set = NULL;
+        struct obd_info oinfo = { { { 0 } } };
+        int rc = 0;
         ENTRY;
 
-        /* We only get block data from the OBD */
-        for (i = 0; i < lov->desc.ld_tgt_count; i++) {
-                if (!lov->lov_tgts[i] || !lov->lov_tgts[i]->ltd_active) {
-                        CDEBUG(D_HA, "lov idx %d inactive\n", i);
-                        continue;
-                }
 
-                err = obd_statfs(class_exp2obd(lov->lov_tgts[i]->ltd_exp),
-                                 &lov_sfs, max_age);
-                if (err) {
-                        if (lov->lov_tgts[i]->ltd_active && !rc)
-                                rc = err;
-                        continue;
-                }
-                lov_update_statfs(class_exp2obd(lov->lov_tgts[i]->ltd_exp),
-                                  osfs, &lov_sfs, set);
-                set++;
-        }
+        /* for obdclass we forbid using obd_statfs_rqset, but prefer using async
+         * statfs requests */
+        set = ptlrpc_prep_set();
+        if (set == NULL)
+                RETURN(-ENOMEM);
 
-        err = lov_fini_statfs(obd, osfs, set);
-        qos_update(lov);
+        oinfo.oi_osfs = osfs;
+        oinfo.oi_flags = flags;
+        rc = lov_statfs_async(obd, &oinfo, max_age, set);
+        if (rc == 0)
+                rc = ptlrpc_set_wait(set);
+        ptlrpc_set_destroy(set);
 
-        RETURN(rc ? rc : err);
+        RETURN(rc);
 }
 
 static int lov_iocontrol(unsigned int cmd, struct obd_export *exp, int len,
@@ -2243,19 +2233,20 @@ static int lov_iocontrol(unsigned int cmd, struct obd_export *exp, int len,
 
                 if ((index >= count))
                         RETURN(-ENODEV);
-                
+
                 if (!lov->lov_tgts[index])
                         /* Try again with the next index */
                         RETURN(-EAGAIN);
                 if (!lov->lov_tgts[index]->ltd_active)
                         RETURN(-ENODATA);
-        
+
                 osc_obd = class_exp2obd(lov->lov_tgts[index]->ltd_exp);
                 if (!osc_obd)
                         RETURN(-EINVAL);
 
                 /* got statfs data */
-                rc = obd_statfs(osc_obd, &stat_buf, cfs_time_current_64() - 1);
+                rc = obd_statfs(osc_obd, &stat_buf,
+                                cfs_time_current_64() - HZ, 0);
                 if (rc)
                         RETURN(rc);
                 if (copy_to_user(data->ioc_pbuf1, &stat_buf, data->ioc_plen1))
